<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.level7jr.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="94dp"
        android:paddingTop="22dp"
        android:text="@string/health_check"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingTop="22dp"
        android:text="@string/book_check"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="bookYes"
        android:text="@string/book_yes" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="bookSometime"
        android:text="@string/book_sometime" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="bookNo"
        android:text="@string/book_no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countBookViewYes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="74dp"
            android:paddingTop="10dp"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/countBookViewNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="74dp"
            android:paddingTop="10dp"
            android:textSize="32sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="checkCountBook"
        android:text="@string/book_check_el" />

</LinearLayout>
